Fix SP robot illustration left clipping: widen wrap to 62px, adjust offset to -63px

--- a/style.css
+++ b/style.css
@@ -3639,14 +3639,14 @@ body {
   }
 
   .reason__robot-wrap {
-    width: 49px;
+    width: 62px;
     height: 93px;
     margin-right: 0;
     top: 0;
   }
 
   .reason__robot-wrap img {
-    left: -81px;
+    left: -63px;
     top: -4px;
     width: 150px;
   }
